--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -5,15 +5,12 @@
 
   <!-- groups buttons -->
   <div class="btn-group pull-right">
-
     <button type="button" 
-            ng-click="fixTabHeight('addGroupTab'); addGroupForm(); setViewTo('add')"
+            ng-click="addGroupForm(); setViewTo('add')"
             class="btn btn-success {{(views.add==true) && 'active'}}">{{ui.groups.newGroup}}</button>
-
     <button type="button" 
-            ng-click="fixTabHeight('newMemberTab'); newMemberForm(); setViewTo('member')" 
+            ng-click="newMemberForm(); setViewTo('member')" 
             class="btn btn-success {{(views.member==true) && 'active'}}">{{ui.groups.newMember}}</button>
-
   </div>
   <!-- end groups buttons -->
 
@@ -29,112 +26,88 @@
     </div>
   </form>
   <!-- end search members -->
-
 </div>
-
 
 <!-- groups and members -->
 <div class="tabbable tabs-left">
 
-
   <!-- tabs links -->
   <ul class="nav nav-tabs nav-tabs-app">
-    
     <!-- add group tab link -->
     <li class="{{(views.add==true) && 'active'}}"
         ng-show="views.add">
       <a href="#addGroupTab" 
-          ng-click="fixTabHeight('addGroupTab'); setViewTo('add')" 
+          ng-click="setViewTo('add')" 
           data-toggle="tab">
         <span class="entypo">&#9998;</span>
         {{ui.groups.addNewGroup}}
       </a>
     </li>
     <!-- end add group tab link -->
-    
     <!-- edit group tab link -->
     <li class="{{(views.edit==true) && 'active'}}"
         ng-show="views.edit">
       <a href="#editGroupTab" 
-          ng-click="fixTabHeight('editGroupTab'); setViewTo('edit')" 
+          ng-click="setViewTo('edit')" 
           data-toggle="tab">
         <span class="entypo">&#9998;</span>
         {{ui.groups.editGroup}}
       </a>
     </li>
     <!-- end edit group tab link -->
-    
     <!-- new member tab link -->
     <li class="{{(views.member==true) && 'active'}}"
         ng-show="views.member">
       <a href="#newMemberTab" 
-          ng-click="fixTabHeight('newMemberTab'); setViewTo('member')" 
+          ng-click="setViewTo('member')" 
           data-toggle="tab">
         <span class="entypo">&#59136;</span>
         {{ui.groups.newMember}}
       </a>
     </li>
     <!-- new member tab link -->
-    
     <!-- search tab link -->
     <li class="{{(views.search==true) && 'active'}}"
         ng-show="views.search">
       <a href="#searchTab" 
-          ng-click="fixTabHeight('searchTab'); setViewTo('search')"
+          ng-click="setViewTo('search')"
           data-toggle="tab">
         <span class="entypo">&#128269;</span>
         {{ui.groups.searchResults}}
       </a>
     </li>
     <!-- end search tab link -->
-
     <!-- group tab links -->
     <li id="groupTabLink" 
         class="{{(views.view==true) && 'active'}}">
-
-
       <a href="#groupTab" 
           data-toggle="tab"
-          ng-click="fixTabHeight('groupTab'); setViewTo('view')">
+          ng-click="setViewTo('view')">
           <span class="entypo">&#128101;</span> 
         {{ui.groups.group}}
       </a>
     </li>
     <!-- end group tab links -->
-
   </ul>
   <!-- end tabs links -->
 
-
-
-
-
   <!-- tabs content -->
   <div class="tab-content">
-
-
-
-
 
     <!-- add group tab -->
     <div class="tab-pane {{(views.add==true) && 'active'}}" 
           id="addGroupTab" 
           ng-show="views.add">
-
         <div class="tab-header">
-
           <h3 class="pull-left">{{ui.groups.addNewGroup}}</h3>
-
           <button type="button" 
                   ng-click="closeTabs()" 
                   class="btn pull-right">{{ui.groups.close}}</button>
         </div>
         <hr>
-
         <!-- group form -->
         <form>
           <fieldset>
-            
             <div class="control-group">
               <label class="control-label">{{ui.groups.name}}</label>
               <div class="controls">
@@ -143,43 +116,31 @@
                     ng-model="groupForm.name">
               </div>
             </div>
-
             <div class="form-actions">
               <button type="submit" 
                       ng-click="groupSubmit(groupForm)" 
                       class="btn btn-success">{{ui.groups.saveGroup}}</button>
             </div>
-
           </fieldset>
         </form>
         <!-- end group form -->
-
     </div>
     <!-- end add group tab -->
-
-
-
-
 
     <!-- edit group tab -->
     <div class="tab-pane {{(views.edit==true) && 'active'}}" 
           id="editGroupTab" 
           ng-show="views.edit">
-
         <div class="tab-header">
-
           <h3 class="pull-left">{{ui.groups.editGroup}}</h3>
-
           <button type="button" 
                   ng-click="closeTabs()" 
                   class="btn pull-right">{{ui.groups.close}}</button>
         </div>
         <hr>
-
         <!-- group form -->
         <form>
           <fieldset>
-            
             <div class="control-group">
               <label class="control-label">{{ui.groups.name}}</label>
               <div class="controls">
@@ -188,43 +149,31 @@
                     ng-model="groupForm.name">
               </div>
             </div>
-
             <div class="form-actions">
               <button type="submit" 
                       ng-click="groupSubmit(groupForm)" 
                       class="btn btn-success">{{ui.groups.saveGroup}}</button>
             </div>
-
           </fieldset>
         </form>
         <!-- end group form -->
-
     </div>
     <!-- edit group tab -->
-
-
-
-
 
     <!-- new member tab -->
     <div class="tab-pane {{(views.member==true) && 'active'}}" 
           id="newMemberTab" 
           ng-show="views.member">
-
         <div class="tab-header">
-
           <h3 class="pull-left">{{ui.groups.registerMember}}</h3>
-
           <button type="button" 
                   ng-click="closeTabs()" 
                   class="btn pull-right">{{ui.groups.close}}</button>
         </div>
         <hr>
-
         <!-- member form -->
         <form>
           <fieldset>
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.role}}</label>
               <div class="controls">
@@ -234,11 +183,9 @@
                 </select>
               </div>
             </div>
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.groups}}</label>
               <div class="controls">
-                <!-- {{ui.groups.selectGroup}} -->
                 <select data-placeholder=" " 
                         multiple 
                         class="chzn-select" 
@@ -250,9 +197,7 @@
                 <!-- <p ng-repeat="group in memberForm.groups"><strong>{{group.uuid}}</strong></p> -->
               </div>
             </div>
-
             <hr>
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.name}}</label>
               <div class="controls">
@@ -261,7 +206,6 @@
                         ng-model="memberForm.name">
               </div>
             </div>
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.email}}</label>
               <div class="controls">
@@ -270,7 +214,6 @@
                         ng-model="memberForm.EmailAddress">
               </div>
             </div>
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.phone}}</label>
               <div class="controls">
@@ -279,7 +222,6 @@
                         ng-model="memberForm.PhoneAddress">
               </div>
             </div>
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.address}}</label>
               <div class="controls">
@@ -288,7 +230,6 @@
                         ng-model="memberForm.PostAddress">
               </div>
             </div>
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.postCode}}</label>
               <div class="controls">
@@ -297,7 +238,6 @@
                         ng-model="memberForm.PostZip">
               </div>
             </div>
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.city}}</label>
               <div class="controls">
@@ -306,9 +246,7 @@
                         ng-model="memberForm.PostCity">
               </div>
             </div>
-
             <hr>
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.userName}}</label>
               <div class="controls">
@@ -317,7 +255,6 @@
                         ng-model="memberForm.username">
               </div>
             </div>
-
             <div class="control-group">
               <label class="control-label">{{ui.groups.password}}</label>
               <div class="controls">
@@ -326,23 +263,16 @@
                         ng-model="memberForm.password">
               </div>
             </div>
-
             <div class="form-actions">
               <button type="submit" 
                   ng-click="memberSubmit(memberForm)" 
                   class="btn btn-success">{{ui.groups.saveMember}}</button>
             </div>
-
           </fieldset>
         </form>
         <!-- end member form -->
-
     </div>
     <!-- end new member tab -->
-
-
-
-
 
     <!-- search tab -->
     <div class="tab-pane {{(views.search==true) && 'active'}}" id="searchTab" ng-show="views.search">
@@ -368,7 +298,11 @@
             <tr ng-repeat="candidate in candidates">
               <td>{{$index + 1}}</td>
               <td>{{candidate.name}}</td>
-              <td>{{candidate.groups}}</td>
+              <td>
+                <span ng-repeat="group in candidate.groups">
+                  <a ng-click="requestGroup(group.uuid, true)">{{group.name}}</a>,
+                </span>
+              </td>
               <td>
                 <select style="margin:0" 
                         ng-model="candidate.group" 
@@ -392,18 +326,10 @@
     </div>
     <!-- end search tab -->
 
-
-
-
-
-
     <!-- group tab -->
     <div  class="tab-pane {{(views.view==true) && 'active'}}"
           id="groupTab">
-
       <div class="tab-header">
-
-
         <!-- groups list -->
         <div class="pull-left">
           <select ng-model="current" 
@@ -413,26 +339,20 @@
           </select>
         </div>
         <!-- end groups list -->
-
-
         <div class="pull-right">
-
           <input type="text" 
                   class="span2 search-query" 
                   placeholder="{{ui.groups.filterMembers}}" 
                   style="margin-right:5px"
                   ng-model="filtered">
-
           <button type="button" 
-                  ng-click="fixTabHeight('editGroupTab'); editGroup(group)" 
+                  ng-click="editGroup(group)" 
                   style="margin-right:5px"
                   class="btn"><i class="icon-edit"></i> {{ui.groups.editGroup}}</button>
-
           <button type="button" 
                   ng-click="deleteGroup(group.uuid)" 
                   class="btn btn-danger"><i class="icon-trash icon-white"></i> {{ui.groups.deleteGroup}}</button>
         </div>
-
       </div>
       <hr>
       <p ng-hide="(data.members[group.uuid]|filter:filtered).length > 0">
@@ -479,7 +399,6 @@
                 ng-click="removeMembers(selection, group)" 
                 class="btn btn-small btn-danger pull-left">
                 <i class="icon-trash icon-white"></i>{{ui.groups.removeSelectedMembers}}</button>
-
         <span class="muted pull-right">
           <small><i>{{(data.members[group.uuid]|filter:filtered).length | i18n_spec:'groups.memberCount'}}</i></small>
         </span>
@@ -487,11 +406,7 @@
     </div>
     <!-- end group tab -->
 
-
-
-
   </div>
   <!-- end tabs content -->
-
 </div>
 <!-- end groups and members -->
