solved with bug with losing message view when being in message view and clicking message tab link

--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -84,7 +84,7 @@
           data-toggle="tab"
           ng-click="setViewTo('view')">
           <span class="entypo">&#128101;</span> 
-        {{ui.groups.group}}
+        {{ui.groups.groups}}
       </a>
     </li>
     <!-- end group tab links -->
