--- a/war/js/views/messages.html
+++ b/war/js/views/messages.html
@@ -7,14 +7,11 @@
   </div>
 </div>
 
-
 <!-- inboxes -->
 <div class="row-fluid">
   <div class="tabbable tabs-left">
-    
     <!-- tabs -->
     <ul class="nav nav-tabs nav-tabs-app">
-
       <li class="{{(views.compose==true) && 'active'}}" ng-show="views.compose">
         <a href="#composeTab" 
             data-toggle="tab"
@@ -22,15 +19,13 @@
           <span class="entypo">&#9998;</span> {{ui.message.compose}}
         </a>
       </li>
-
       <li class="{{(views.message==true) && 'active'}}"  ng-show="views.message">
         <a href="#viewTab" 
             data-toggle="tab"
-            ng-click="setViewTo('view')">
+            ng-click="">
           <span class="entypo">&#128196;</span> {{ui.message.message}}
         </a>
       </li>
-
       <li class="{{(views.inbox==true) && 'active'}}">
         <a href="#inboxTab" 
             data-toggle="tab"
@@ -38,7 +33,6 @@
           <span class="entypo">&#128229;</span> {{ui.message.inbox}}
         </a>
       </li>
-
       <li class="{{(views.outbox==true ) && 'active'}}">
         <a href="#outboxTab"   
             data-toggle="tab"
@@ -46,7 +40,6 @@
           <span class="entypo">&#128228;</span> {{ui.message.outbox}}
         </a>
       </li>
-
       <li class="{{(views.trash==true ) && 'active'}}">
         <a href="#trashTab" 
             data-toggle="tab"
@@ -54,19 +47,14 @@
           <span class="entypo">&#9749;</span> {{ui.message.trash}}
         </a>
       </li>
-
     </ul>
     <!-- end tabs -->
 
-
     <!-- tabs content -->
     <div class="tab-content">
-
-
       
       <!-- composeTab -->
       <div class="tab-pane {{(views.compose==true) && 'active'}}" id="composeTab" ng-show="views.compose">
-
         <div class="tab-header">
           <h3 class="pull-left">{{ui.message.composeMessage}}</h3>
           <button type="submit" 
@@ -74,23 +62,19 @@
                   class="btn pull-right">{{ui.message.close}}</button>
         </div>
         <hr>
-
         <!-- compose form -->
         <form>
           <fieldset>
-        
             <div class="control-group">
               <label class="control-label">{{ui.message.broadcast}}</label>
               <div  class="btn-group"  
                     bs-buttons-checkbox="" 
                     data-toggle="buttons-checkbox">
-
                 <button type="button" 
                         class="btn btn-small" 
                         ng-model="broadcast.sms" 
                         ng-click=""
                         bs-button="">{{ui.message.sms}}</button>
-
                 <button type="button" 
                         class="btn btn-small" 
                         ng-model="broadcast.email" 
@@ -98,7 +82,6 @@
                         bs-button="">{{ui.message.email}}</button>
               </div>
             </div>
-
             <div class="control-group">
               <label class="control-label">{{ui.message.receviers}}</label>
               <!-- {{ui.message.chooseRecept}} -->
@@ -112,7 +95,6 @@
               </select>
               <!-- <p ng-repeat="receiver in message.receivers"><strong>{{receiver.id}}</strong></p> -->
             </div>
-
             <div class="control-group">
               <label class="control-label">{{ui.message.subject}}</label>
               <input type="text" 
@@ -120,40 +102,27 @@
                       ng-model="message.subject"
                       placeholder="{{ui.message.typeSubject}}">
             </div>
-
-
             <div class="control-group">
               <label class="control-label">{{ui.message.message}}</label>
               <textarea rows="7" 
                         class="span7"
                         ng-model="message.body"></textarea>
             </div>
-
             <div class="form-actions">
               <button type="submit" 
                       ng-click="send(message, broadcast)" 
                       class="btn btn-success">{{ui.message.sendMessage}}</button>
             </div>
-
           </fieldset>
         </form>
         <!-- end compose form -->
-
       </div>
       <!-- end composeTab -->
 
-
-
-
-
-
-      
       <!-- viewTab -->
       <div class="tab-pane {{(views.message==true) && 'active'}}" id="viewTab" ng-show="views.message">
-
         <div class="tab-header">
           <h3 class="pull-left">{{message.subject}}</h3>
-
           <div class="pull-right">
             <button type="button" 
                     ng-click="closeTabs()" 
@@ -161,7 +130,6 @@
           </div>
         </div>
         <hr>
-
         <!-- message view -->
         <dl>
           <dt>{{ui.message.sender}}</dt>
@@ -178,7 +146,6 @@
             <dd>{{message.question_text}}</dd>
         </dl>
         <!-- end message view -->
-
         <form>
           <fieldset>
             <div class="form-actions">
@@ -191,20 +158,13 @@
             </div>
           </fieldset>
         </form>
-
       </div>
       <!-- end viewTab -->
 
-
-
-
-
       <!-- inboxTab -->
       <div class="tab-pane {{(views.inbox==true) && 'active'}}" id="inboxTab">
-
         <div class="tab-header">
           <h3 class="pull-left">{{ui.message.inbox}}</h3>
-
           <!-- filter messages -->
           <form class="pull-right">
             <input type="text" 
@@ -213,12 +173,9 @@
                     ng-model="query.inbox">
           </form>
           <!-- end filter messages -->
-
         </div>
         <hr>
-
         <p ng-hide="(messages.inbox|filter:query.inbox).length > 0">{{ui.message.noMessage}}</p>
-
         <!-- inbox listing -->
         <div ng-show="(messages.inbox|filter:query.inbox).length > 0">
           <table class="table table-striped">
@@ -237,7 +194,6 @@
               </tr>
             </thead>
             <tbody>
-
               <tr ng-repeat="message in messages.inbox | filter:query.inbox | orderBy:'creationTime':true">
                 <td>
                   <input type="checkbox"
@@ -250,46 +206,32 @@
                 <td>{{message.creationTime|nicelyDate}}</td>
                 <td>
                   <div class="pull-right">
-                  
                     <button class="btn btn-mini"
                             ng-click="reply(message)"><i class="icon-share-alt"></i></button>
-
                     <button type="submit" 
                             ng-click="removeMessage(message.uuid)" 
                             class="btn btn-danger btn-mini"><i class="icon-trash icon-white"></i></button>
-
                   </div>
                 </td>
               </tr>
-
             </tbody>
           </table>
-
           <button type="button" 
                   ng-click="removeMessages(selection.inbox)" 
                   class="btn btn-small btn-danger pull-left">
                   <i class="icon-trash icon-white"></i> {{ui.message.deleteSelected}}</button>
-
           <span class="muted pull-right">
             <small><i>{{(messages.inbox|filter:query.inbox).length | i18n_spec:'message.someMessage'}} </i></small>
           </span>
         </div>
         <!-- end inbox listing -->
-
       </div>
       <!-- end inboxTab -->
 
-
-
-
-
-
       <!-- outboxTab -->
       <div class="tab-pane {{(views.outbox==true) && 'active'}}" id="outboxTab">
-
         <div class="tab-header">
           <h3 class="pull-left">{{ui.message.outbox}}</h3>
-
           <!-- filter messages -->
           <form class="pull-right">
             <input type="text" 
@@ -300,9 +242,7 @@
           <!-- end filter messages -->
         </div>
         <hr>
-
         <p ng-hide="(messages.outbox|filter:query.outbox).length > 0">{{ui.message.noMessage}}</p>
-
         <!-- outbox listing -->
         <div ng-show="(messages.outbox|filter:query.outbox).length > 0">
           <table class="table table-striped">
@@ -320,7 +260,6 @@
               </tr>
             </thead>
             <tbody>
-
               <tr ng-repeat="message in messages.outbox | filter:query.outbox | orderBy:'creationTime':true">
                 <td>
                   <input type="checkbox"
@@ -337,38 +276,27 @@
                     <button type="submit" 
                             ng-click="removeMessage(message.uuid)" 
                             class="btn btn-danger btn-mini"><i class="icon-trash icon-white"></i></button>
-
                   </div>
                 </td>
               </tr>
-
             </tbody>
           </table>
-
           <button type="button" 
                   ng-click="removeMessages(selection.outbox)" 
                   class="btn btn-small btn-danger pull-left">
                   <i class="icon-trash icon-white"></i>{{ui.message.deleteSelected}}</button>
-
           <span class="muted pull-right">
             <small><i>{{(messages.outbox|filter:query.outbox).length | i18n_spec:'message.someMessage'}}</i></small>
           </span>
         </div>
         <!-- end outbox listing -->
-
       </div>
       <!-- end outboxTab -->
 
-
-
-
-
       <!-- trashTab -->
       <div class="tab-pane {{(views.trash==true) && 'active'}}" id="trashTab">
-
         <div class="tab-header">
           <h3 class="pull-left">{{ui.message.trash}}</h3>
-
           <!-- empty trash button -->
           <div class="pull-right" style="margin-left: 10px;">
             <button type="button" 
@@ -377,7 +305,6 @@
                   <i class="icon-trash icon-white"></i>{{ui.message.emptyTrash}}</button>
           </div>
           <!-- end empty trash button -->
-
           <!-- filter messages -->
           <form class="pull-right">
             <input type="text" 
@@ -386,12 +313,9 @@
                     ng-model="query.trash">
           </form>
           <!-- end filter messages -->
-
         </div>
         <hr>
-
         <p ng-hide="(messages.trash|filter:query.trash).length > 0">{{ui.message.noMsgInTrash}}</p>
-
         <!-- trash listing -->
         <div ng-show="(messages.trash|filter:query.trash).length > 0">
           <table class="table table-striped">
@@ -410,7 +334,6 @@
               </tr>
             </thead>
             <tbody>
-
               <tr ng-repeat="message in messages.trash | filter:query.trash | orderBy:'creationTime':true">
                 <td>
                   <input type="checkbox"
@@ -425,18 +348,14 @@
                 <td>{{message.creationTime|nicelyDate}}</td>
                 <td>
                   <div class="pull-right">
-
                     <button type="submit" 
                             ng-click="restoreMessage(message.uuid)" 
                             class="btn btn-success btn-mini"><i class="icon-thumbs-up icon-white"></i></button>
-
                   </div>
                 </td>
               </tr>
-
             </tbody>
           </table>
-
           <button type="button" 
                   ng-click="restoreMessages(selection.trash)" 
                   class="btn btn-small btn-success pull-left">
@@ -447,16 +366,11 @@
           </span>
         </div>
         <!-- end trash listing -->
-
       </div>
       <!-- end trashTab -->
 
-
-
-
     </div>
     <!-- end tabs content -->
-
   </div>
 </div>
 <!-- end inboxes
