solved an issue with ability of sending messages with no receivers

--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -316,9 +316,11 @@
             </tr>
           </tbody>
         </table>
-        <button type="button" 
+
+        <!-- <button type="button" 
                 ng-click="addMembers()" 
-                class="btn btn-success btn-small pull-left">{{ui.groups.addMemberToGroup}}</button>
+                class="btn btn-success btn-small pull-left">{{ui.groups.addMemberToGroup}}</button> -->
+                
         <span class="muted pull-right">
           <small><i>{{candidates.length | i18n_spec:'groups.resultCount'}}</i></small>
         </span>
